# fundamental-data-structure-algorithm

C++Programs/: CMakeLists.txt  main.cpp
C++Programs/BruteForce/Iterative-Approach/ClosestPair/: CLOSEST_PAIR.INP  closestPair.cpp
C++Programs/BruteForce/Iterative-Approach/Combination/: combination.cpp
C++Programs/BruteForce/Iterative-Approach/ConvexHull/: convexHull.cpp
C++Programs/BruteForce/Iterative-Approach/Permutation/: permutation.cpp
C++Programs/BruteForce/Recursive-Approach/ArrangementSizeK/: arrangementSizeK.cpp  output.txt
C++Programs/BruteForce/Recursive-Approach/Combination/: combination.cpp  output.txt
C++Programs/BruteForce/Recursive-Approach/NQueens/: QUEENS.OUT  nqueensDesign  queensArrangements.cpp
C++Programs/BruteForce/Recursive-Approach/Permutation/: permutation.cpp
C++Programs/BruteForce/Recursive-Approach/TSP-Naive/: TSP_naive.cpp
C++Programs/DivideAndConquer/: mergeSort.cpp  quicksort.cpp
C++Programs/DynamicProgramming/Knapsack1-0/: BALO.OUT  knapsack.cpp
C++Programs/DynamicProgramming/LIS/: INCSEQ.OUT  lis.cpp
C++Programs/DynamicProgramming/TSP_BranchAndBound/: TSP.OUT  TSP.cpp
PythonPrograms/: DFS.txt
PythonPrograms/DataStructure/: Queue.py  SingleLinkedList.py  Stack.py  maxHeap.py  minHeap.py  minPriorityQueue.py  simpler-stack.txt
PythonPrograms/Graph/: BFS.py  BuildGraph.md  ConnectedComponent.py  DFS.py  bfs_distance.py  data.inp
PythonPrograms/Graph/Dijkstra-Algorithms/: Dijkstra.py  Dijkstra_note.txt  minPriorityQueue.py
PythonPrograms/Tree/: bsTree.py
